--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
                 "--pretrained_model_name_or_path=kandinsky-community/kandinsky-2-2-prior",
                 "--image_encoder_path=laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
                 "--img_path=./data/train_lst_256_png",
-                "--json_path=./data/train_data.json",
+                // "--json_path=./data/train_data.json",
                 "--output_dir=output_dir",
                 "--img_height=256",
                 "--img_width=256",
