--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,36 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python 调试程序: 当前文件",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "args": [
-                // "launch",
-                // "--num_machines", "1",
-                // "--mixed_precision", "no",
-                // "--dynamo_backend", "no",
-                // "--gpu_ids", "0",
-                // "--use_deepspeed",
-                // "--num_processes", "1",
-                // "stage1_train_prior_model.py",
-                "--pretrained_model_name_or_path=kandinsky-community/kandinsky-2-2-prior",
-                "--image_encoder_path=laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
-                "--img_path=./data/train_lst_256_png",
-                // "--json_path=./data/train_data.json",
-                "--output_dir=output_dir",
-                "--img_height=256",
-                "--img_width=256",
-                "--train_batch_size=1",
-                "--gradient_accumulation_steps=1",
-                "--max_train_steps=100000",
-                "--noise_offset=0.1",
-                "--learning_rate=1e-05",
-                "--weight_decay=0.01",
-                "--lr_scheduler=constant",
-                "--num_warmup_steps=2000",
-                "--checkpointing_steps=5000",
-                "--seed", "42"
+                // "--pretrained_model_name_or_path=kandinsky-community/kandinsky-2-2-prior",
+                // "--image_encoder_path=laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
+                // "--img_path=./data/train_lst_256_png",
+                // "--output_dir=output_dir",
+                // "--img_height=256",
+                // "--img_width=256",
+                // "--train_batch_size=1",
+                // "--gradient_accumulation_steps=1",
+                // "--max_train_steps=100000",
+                // "--noise_offset=0.1",
+                // "--learning_rate=1e-05",
+                // "--weight_decay=0.01",
+                // "--lr_scheduler=constant",
+                // "--num_warmup_steps=2000",
+                // "--checkpointing_steps=5000",
+                // "--seed",
+                // "42"
             ],
             "console": "integratedTerminal"
         }
